--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -1,18 +1,21 @@
-name: my first workflow
+# .github/workflows/ci.yml
+name: CI for JS Testing
+# Trigger the workflow on pull requests to the main branch
 on:
-  push:
-    branches:
-    - main
-  workflow_dispatch:
+pull_request:
+branches:
+- main
 jobs:
-  MyFirstJob:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "hello world"
-      - name: Checkout
-        uses: actions/checkout@v5.0.0
-
-      - name: List files in repo
-        run: |
-          echo "repo ${{ github.repository }} contains following files:"
-          tree
+test:
+runs-on: ubuntu-latest
+steps:
+- name: Checkout repository code
+uses: actions/checkout@v3
+- name: Set up Node.js
+uses: actions/setup-node@v3
+with:
+node-version: '18' # Specify the Node.js version
+- name: Install dependencies
+run: npm install
+- name: Run tests
+run: npm test
