--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,17 +4,32 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
+      
 jobs:
   test:
     runs-on: ubuntu-latest
+    
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: ['16', '18', '20']
+    
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v3
-      - name: Set up Node.js
+        
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '18' # Specify the Node.js version
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          
       - name: Install dependencies
         run: npm install
+        
       - name: Run tests
         run: npm test
+        
+      - name: Run ESLint
+        run: npm run lint
