fix workflow file for node 16 jest tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,13 @@ jobs:
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v3
+
+      - name: Run tests (single-thread for Node 16)
+        if: startsWith(matrix.node-version, '16')
+        run: npm test -- --runInBand
         
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js (not ${{ matrix.node-version }})
+        if: not(startsWith(matrix.node-version, '16'))
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
