--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run tests (single-thread for Node 16)
-        if: startsWith(matrix.node-version, '16')
+        if: ${{ startsWith(matrix.node-version, '16') }}
         run: npm test -- --runInBand
         
       - name: Use Node.js (not ${{ matrix.node-version }})
-        if: !startsWith(matrix.node-version, '16')
+        if: ${{ !startsWith(matrix.node-version, '16') }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
