--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ['17', '18', '20']
+        node-version: ['16', '18', '20']
     
     steps:
       - name: Checkout repository code
@@ -36,5 +36,6 @@ jobs:
         if: ${{ startsWith(matrix.node-version, '16') }}
         run: npm test -- --runInBand
         
-      - name: Run ESLint
+      - name: Run ESLint (Node >=18)
+        if: ${{ matrix.node-version >= 18 }}
         run: npm run lint
