--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,10 @@
 name: CI for JS Testing
-# Trigger the workflow on pull requests to the main branch
 on:
   pull_request:
     branches:
       - main
   workflow_dispatch:
-      
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -39,3 +38,43 @@ jobs:
       - name: Run ESLint (Node >=18)
         if: ${{ matrix.node-version >= 18 }}
         run: npm run lint
+
+  build:
+    name: Build react app after tests
+    needs: test
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == true }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build react app
+        run: npm run build
+        
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./build
+          artifact_name: site-artifact
+
+  deploy:
+    name: Deploy to GitHub Pages
+    needs: build
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: site-artifact
+    
