--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --testMatch '**/tests/**/*.test.js'",
+    "lint": "eslint . --ext .js,.jsx --fix"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/anotherwinter/actions#readme",
   "devDependencies": {
+    "eslint": "^9.36.0",
     "jest": "^30.2.0"
   }
 }
