--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,6 @@ jobs:
     name: Build react app after tests
     needs: test
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.merged == true && matrix.node-version == 18 }}
 
     steps:
       - name: Checkout repository
@@ -52,7 +51,7 @@ jobs:
       - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
           cache: 'npm'
 
       - name: Install dependencies
