--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,9 +55,11 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
+        working-directory: ./test-app
         run: npm install
 
       - name: Build react app
+        working-directory: ./test-app
         run: npm run build
 
       - name: Run react app tests
@@ -67,7 +69,7 @@ jobs:
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./build
+          path: ./test-app/build
           artifact_name: site-artifact
 
   deploy:
