--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     environment:
-      name: gh-pages
+      name: github-pages
       
     #if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     steps:
